// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App module Should app component render preperly when forceDark=false 1`] = `
<Fragment>
  <Head>
    <title>
      CU Get Reg
    </title>
    <meta
      content="minimum-scale=1, initial-scale=1, width=device-width"
      name="viewport"
    />
  </Head>
  <AppProvider
    forceDark={false}
  >
    <TrackPageChange>
      <LoadingProgress />
      <CssBaseline />
      <TopBar />
      <ForwardRef(Container)>
        <ErrorBoundary>
          <mockComponent
            test="test"
          />
        </ErrorBoundary>
      </ForwardRef(Container)>
      <Footer />
      <CourseSnackbar />
      <ShoppingCartModal />
    </TrackPageChange>
  </AppProvider>
</Fragment>
`;

exports[`App module Should app component render preperly when forceDark=true 1`] = `
<Fragment>
  <Head>
    <title>
      CU Get Reg
    </title>
    <meta
      content="minimum-scale=1, initial-scale=1, width=device-width"
      name="viewport"
    />
  </Head>
  <AppProvider
    forceDark={true}
  >
    <TrackPageChange>
      <LoadingProgress />
      <CssBaseline />
      <TopBar />
      <ForwardRef(Container)>
        <ErrorBoundary>
          <mockComponent
            test="test"
          />
        </ErrorBoundary>
      </ForwardRef(Container)>
      <Footer />
      <CourseSnackbar />
      <ShoppingCartModal />
    </TrackPageChange>
  </AppProvider>
</Fragment>
`;
